Fix Sonar issues: critical, major, and minor violations
- Add private constructors to utility classes (11 files)
- Guard Optional.get() with isPresent() checks
- Replace == with .equals() for String/Boxed type comparisons
- Switch to parameterized SLF4J logging (no string concatenation)
- Replace .collect(Collectors.toList()) with .toList() (13 sites)
- Replace .size()==0 with .isEmpty() and use diamond operator
- Use StringBuilder in loops instead of + concatenation
- Remove commented-out code blocks (29 instances)
- Rename local variables shadowing class fields
- Rewrite FileUploader to use HttpURLConnection (drop commons-httpclient 3.x)
- Remove commons-httpclient:3.1 from pom.xml
- Fix logger class references to use enclosing class
- Combine multi-catch blocks, remove unused imports

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>