@@ -1,7 +1,6 @@
 package com.cybage.sonar.report.pdf.builder;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -35,16 +34,14 @@ public class IssueBuilder {
 
     public List<Issue> initIssueDetailsByProjectKey(final String key, final Set<String> typesOfIssue) {
 
-        // LOGGER.info("Retrieving issue details for " + key);
-
         List<Issue> issues     = new ArrayList<>();
         Integer     pageNumber = 1;
         Integer     pageSize   = 500;
 
-        final List<String> TypeOfIssuesConvertedParam = convertTypes(typesOfIssue);
+        final List<String> typeOfIssuesConvertedParam = convertTypes(typesOfIssue);
 
         while (true) {
-            SearchWsResponse searchWsRes = searchForPaginatedIssues(key, pageNumber, pageSize, TypeOfIssuesConvertedParam);
+            SearchWsResponse searchWsRes = searchForPaginatedIssues(key, pageNumber, pageSize, typeOfIssuesConvertedParam);
 
             if (searchWsRes.getTotal() > 0) {
                 for (int i = 0; i < searchWsRes.getIssuesCount(); i++) {
@@ -61,7 +58,7 @@ public class IssueBuilder {
                     break;
                 }
             } else {
-                LOGGER.debug("There are no issues in project : " + key);
+                LOGGER.debug("There are no issues in project: {}", key);
                 break;
             }
         }
@@ -71,7 +68,7 @@ public class IssueBuilder {
     private List<String> convertTypes(final Set<String> typesOfIssue) {
         return typesOfIssue.stream()
                            .map(String::toUpperCase)
-                           .collect(Collectors.toList());
+                           .toList();
     }
 
     private SearchWsResponse searchForPaginatedIssues(final String key, final Integer pageNumber, final Integer pageSize, final List<String> typeOfIssuesConvertedParam) {
@@ -82,8 +79,7 @@ public class IssueBuilder {
         searchWsReq.setStatuses(of("OPEN"));
 
         searchWsReq.setTypes(typeOfIssuesConvertedParam);
-        SearchWsResponse searchWsRes = wsClient.issues().search(searchWsReq);
-        return searchWsRes;
+        return wsClient.issues().search(searchWsReq);
     }
 
     private Optional<String> findComponent(final SearchWsResponse searchWsRes, final org.sonarqube.ws.Issues.Issue issue) {
